Done with code.. Need to do a writeup:

--- a/Building a Simple Recommendation System in FSharp.ipynb
+++ b/Building a Simple Recommendation System in FSharp.ipynb
@@ -8,6 +8,8 @@
     "\n",
     "## Introduction \n",
     "\n",
+    "This year, I decided to keep my FSharp Advent article simple in that I'll be creating a very simply Content Recommendation system based on the TMDB data that can be found [here](https://www.kaggle.com/tmdb/tmdb-movie-metadata). \n",
+    "\n",
     "## Preliminaries"
    ]
   },
@@ -31,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import Packages"
+    "### Imports and Data Path"
    ]
   },
   {
@@ -45,7 +47,209 @@
     "open FSharp.Data\n",
     "open MathNet.Numerics\n",
     "open System.Collections.Generic\n",
-    "open Microsoft.FSharp.Collections"
+    "open Microsoft.FSharp.Collections\n",
+    "\n",
+    "[<Literal>]\n",
+    "// Data obtained from: https://www.kaggle.com/tmdb/tmdb-movie-metadata\n",
+    "let DataPath = \"../../Desktop/F#/FSharp-Advent-2019/data/tmdb_5000_movies.csv\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Processing\n",
+    "\n",
+    "### Data Exploration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Some\n",
+       "  [|\"budget\"; \"genres\"; \"homepage\"; \"id\"; \"keywords\"; \"original_language\";\n",
+       "    \"original_title\"; \"overview\"; \"popularity\"; \"production_companies\";\n",
+       "    \"production_countries\"; \"release_date\"; \"revenue\"; \"runtime\";\n",
+       "    \"spoken_languages\"; \"status\"; \"tagline\"; \"title\"; \"vote_average\";\n",
+       "    \"vote_count\"|]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "let data = CsvFile.Load(DataPath).Cache()\n",
+    "data.Headers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the headers, we will consider 2 features:\n",
+    "1. __Word Soup__: Consisting of sanitized words based on the genres, keywords, production companies and overview.\n",
+    "    - Similar movies would have similar genres, keywords, production companies and words in the overview and therefore could lead to good recommendations.\n",
+    "2. __Popularity__: A popularity score from TMDB. The rationale here is that the recommendations will be based on similar popularity scores."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "let getFirstItemInColumn (colName : string) = \n",
+    "    seq { for row in data.Rows -> row.GetColumn colName }\n",
+    "    |> Seq.head"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Genres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"[{\"id\": 28, \"name\": \"Action\"}, {\"id\": 12, \"name\": \"Adventure\"}, {\"id\": 14, \"name\": \"Fantasy\"}, {\"id\": 878, \"name\": \"Science Fiction\"}]\""
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getFirstItemInColumn \"genres\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Keywords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"[{\"id\": 1463, \"name\": \"culture clash\"}, {\"id\": 2964, \"name\": \"future\"}, {\"id\": 3386, \"name\": \"space war\"}, {\"id\": 3388, \"name\": \"space colony\"}, {\"id\": 3679, \"name\": \"society\"}, {\"id\": 3801, \"name\": \"space travel\"}, {\"id\": 9685, \"name\": \"futuristic\"}, {\"id\": 9840, \"name\": \"romance\"}, {\"id\": 9882, \"name\": \"space\"}, {\"id\": 9951, \"name\": \"alien\"}, {\"id\": 10148, \"name\": \"tribe\"}, {\"id\": 10158, \"name\": \"alien planet\"}, {\"id\": 10987, \"name\": \"cgi\"}, {\"id\": 11399, \"name\": \"marine\"}, {\"id\": 13065, \"name\": \"soldier\"}, {\"id\": 14643, \"name\": \"battle\"}, {\"id\": 14720, \"name\": \"love affair\"}, {\"id\": 165431, \"name\": \"anti war\"}, {\"id\": 193554, \"name\": \"power relations\"}, {\"id\": 206690, \"name\": \"mind and soul\"}, {\"id\": 209714, \"name\": \"3d\"}]\""
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getFirstItemInColumn \"keywords\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Overview"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"In the 22nd century, a paraplegic Marine is dispatched to the moon Pandora on a unique mission, but becomes torn between following orders and protecting an alien civilization.\""
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getFirstItemInColumn \"overview\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Production Company"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"[{\"name\": \"Ingenious Film Partners\", \"id\": 289}, {\"name\": \"Twentieth Century Fox Film Corporation\", \"id\": 306}, {\"name\": \"Dune Entertainment\", \"id\": 444}, {\"name\": \"Lightstorm Entertainment\", \"id\": 574}]\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getFirstItemInColumn \"production_companies\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Popularity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"150.437577\""
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getFirstItemInColumn \"popularity\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the samples of the columns considered, it seems like we'll need to sanitize the data extensively. Before we do so, let's define the domain objects we will be dealing with."
    ]
   },
   {
@@ -57,18 +261,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "type MovieCompareData = { title : string; soup : string; soupList : string list }"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Data Processing"
+    "type MovieCompareData = { title      : string; \n",
+    "                          soup       : string;\n",
+    "                          soupList   : string list;\n",
+    "                          popularity : double }"
    ]
   },
   {
@@ -80,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +333,7 @@
        "[\"brown\"; \"dog\"; \"fox\"; \"jumps\"; \"lazy\"; \"quick\"; \"the\"]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,11 +353,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Grab Genre\n",
+    "// Genre\n",
     "[<Literal>]\n",
     "let SampleGenresJson = \"[{\\\"id\\\": 28, \\\"name\\\": \\\"Action\\\"}, {\\\"id\\\": 12, \\\"name\\\": \\\"Adventure\\\"}, {\\\"id\\\": 80, \\\"name\\\": \\\"Crime\\\"}]\"\n",
     "\n",
@@ -170,7 +370,7 @@
     "    |> String.concat \" \"\n",
     "    |> tokenizeAndClean\n",
     "\n",
-    "// Grab Keywords\n",
+    "// Keywords\n",
     "[<Literal>]\n",
     "let SampleKeywordsJson = \"[{\\\"id\\\": 1463, \\\"name\\\": \\\"culture clash\\\"}, {\\\"id\\\": 2964, \\\"name\\\": \\\"future\\\"}, {\\\"id\\\": 3386, \\\"name\\\": \\\"space war\\\"}]\"\n",
     "\n",
@@ -183,11 +383,23 @@
     "    |> String.concat \" \"\n",
     "    |> tokenizeAndClean\n",
     "\n",
-    "// Grab Overview\n",
+    "// Overview\n",
     "let sanitizeOverview (overview : string) : string list = \n",
     "    let nonAsciiRemoved = Encoding.ASCII.GetString(Encoding.ASCII.GetBytes(overview))\n",
     "    tokenizeAndClean nonAsciiRemoved\n",
-    "    |> List.filter( fun x -> x <> String.Empty )"
+    "    |> List.filter( fun x -> x <> String.Empty )\n",
+    "    \n",
+    "// Production Company\n",
+    "[<Literal>]\n",
+    "let ProductionCompanyJson = \"[{\\\"name\\\": \\\"Ingenious Film Partners\\\", \\\"id\\\": 289}, {\\\"name\\\": \\\"Twentieth Century Fox Film Corporation\\\", \\\"id\\\": 306}, {\\\"name\\\": \\\"Dune Entertainment\\\", \\\"id\\\": 444}, {\\\"name\\\": \\\"Lightstorm Entertainment\\\", \\\"id\\\": 574}]\"\n",
+    "type ProductionCompanyProvider = JsonProvider< ProductionCompanyJson >\n",
+    "\n",
+    "let sanitizeProductionCompany (productionCompany : string) : string list = \n",
+    "    let parsed = ProductionCompanyProvider.Parse(productionCompany)\n",
+    "    parsed\n",
+    "    |> Array.map( fun x -> x.Name.Replace(\" \", \"\")) // Lightstorm Entertainment -> LightstormEntertainment\n",
+    "    |> String.concat \" \"\n",
+    "    |> tokenizeAndClean"
    ]
   },
   {
@@ -199,12 +411,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "let extractData =\n",
-    "    let data = CsvFile.Load( \"../../Desktop/F#/FSharp-Advent-2019/data/tmdb_5000_movies.csv\").Cache()\n",
+    "    let data = CsvFile.Load(DataPath).Cache()\n",
     "    let mutable output = []\n",
     "    for row in data.Rows do\n",
     "        let title    = (row.GetColumn \"title\")\n",
@@ -221,20 +433,27 @@
     "        let overview        = sanitizeOverview (row.GetColumn \"overview\")\n",
     "        let getSoupOverview = overview |> String.concat \" \"\n",
     "        \n",
+    "        // Production Company\n",
+    "        let productionCompany        = sanitizeProductionCompany (row.GetColumn \"production_companies\")\n",
+    "        let getSoupProductionCompany = productionCompany |> String.concat \" \"\n",
+    "        \n",
     "        // Soup\n",
-    "        let soup     = getSoupGenres + \" \" + getSoupKeyword + \" \" + getSoupOverview\n",
-    "        let soupList = genres @ keywords @ overview\n",
+    "        let soup     = getSoupGenres + \" \" + getSoupKeyword + \" \" + getSoupOverview + \" \" + getSoupProductionCompany\n",
+    "        let soupList = genres @ keywords @ overview @ productionCompany\n",
+    "        \n",
+    "        // Popularity\n",
+    "        let popularity = double(row.GetColumn \"popularity\")\n",
     "        \n",
     "        // Construct data type\n",
     "        let movieCompareData = { title = title; \n",
     "                                 soup  = soup;\n",
+    "                                 popularity = popularity;\n",
     "                                 soupList = soupList }\n",
-    "        \n",
+    "    \n",
     "        // Append the output\n",
     "        output <- output @ [movieCompareData]\n",
-    "        \n",
     "    output\n",
-    "    \n",
+    "  \n",
     "let getDictOfData = \n",
     "    let out = Dictionary<string, MovieCompareData>()\n",
     "    for w in extractData do\n",
@@ -244,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +472,7 @@
        "seq\n",
        "  [[Avatar, {title = \"Avatar\";\n",
        " soup =\n",
-       "  \"action adventure fantasy sciencefiction 3d alien alienplanet antiwar battle cgi cultureclash future futuristic loveaffair marine mindandsoul powerrelations romance society soldier space spacecolony spacetravel spacewar tribe 22nd alien becomes century civilization dispatched following marine mission moon orders pandora paraplegic protecting torn unique\";\n",
+       "  \"action adventure fantasy sciencefiction 3d alien alienplanet antiwar battle cgi cultureclash future futuristic loveaffair marine mindandsoul powerrelations romance society soldier space spacecolony spacetravel spacewar tribe 22nd alien becomes century civilization dispatched following marine mission moon orders pandora paraplegic protecting torn unique duneentertainment ingeniousfilmpartners lightstormentertainment twentiethcenturyfoxfilmcorporation\";\n",
        " soupList =\n",
        "  [\"action\"; \"adventure\"; \"fantasy\"; \"sciencefiction\"; \"3d\"; \"alien\";\n",
        "   \"alienplanet\"; \"antiwar\"; \"battle\"; \"cgi\"; \"cultureclash\"; \"future\";\n",
@@ -261,10 +480,13 @@
        "   \"romance\"; \"society\"; \"soldier\"; \"space\"; \"spacecolony\"; \"spacetravel\";\n",
        "   \"spacewar\"; \"tribe\"; \"22nd\"; \"alien\"; \"becomes\"; \"century\"; \"civilization\";\n",
        "   \"dispatched\"; \"following\"; \"marine\"; \"mission\"; \"moon\"; \"orders\"; \"pandora\";\n",
-       "   \"paraplegic\"; \"protecting\"; \"torn\"; \"unique\"];}]]"
+       "   \"paraplegic\"; \"protecting\"; \"torn\"; \"unique\"; \"duneentertainment\";\n",
+       "   \"ingeniousfilmpartners\"; \"lightstormentertainment\";\n",
+       "   \"twentiethcenturyfoxfilmcorporation\"];\n",
+       " popularity = 150.437577;}]]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,20 +505,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "let getAllWords = \n",
+    "// Function gets all the distinct words from the soup list\n",
+    "let getAllWords : seq<string> = \n",
     "    extractData\n",
     "    |> Seq.map(fun x -> x.soupList)\n",
     "    |> Seq.concat \n",
     "    |> Seq.distinct\n",
     "\n",
     "let getWordCountForSoup (movieCompare : MovieCompareData) = \n",
-    "    let words = getAllWords\n",
     "    let wordCount = new Dictionary<string, int>()\n",
-    "    for w in words do\n",
+    "    for w in getAllWords do\n",
     "        let count = \n",
     "            movieCompare.soupList\n",
     "            |> List.filter( fun x -> x = w )\n",
@@ -319,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +551,7 @@
        "Some\n",
        "  [|1.0; 1.0; 1.0; 1.0; 1.0; 2.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 2.0;\n",
        "    1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0;\n",
-       "    1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0;\n",
+       "    1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 1.0; 0.0; 0.0;\n",
        "    0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0;\n",
        "    0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0;\n",
        "    0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0;\n",
@@ -340,8 +562,8 @@
        "    0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0;\n",
        "    1.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0;\n",
        "    0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0;\n",
-       "    0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 1.0; 0.0; 0.0;\n",
        "    0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0;\n",
+       "    0.0; 0.0; 0.0; 0.0; 1.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0;\n",
        "    0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; 0.0; ...|]\n"
       ]
      },
@@ -368,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -392,15 +614,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "let computeCosineDistance (movie1 : string) (movie2 : string)  = \n",
+    "let computeCosineDistance (movie1 : string) (movie2 : string) : double  = \n",
     "    let movie1Vector = getWordCountVector movie1\n",
     "    let movie2Vector = getWordCountVector movie2\n",
     "    match movie1Vector, movie2Vector with\n",
-    "    | Some m1, Some m2 -> Distance.Cosine(m1, m2) \n",
+    "    | Some m1, Some m2 -> Distance.Cosine(m1, m2)\n",
     "    | None, Some _ -> failwith \"Movie 1 not found in the data.\"\n",
     "    | Some _, None -> failwith \"Movie 2 not found in the data.\"\n",
     "    | _ -> failwith \"Neither of the movies found in the data.\""
@@ -408,16 +630,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.966873067"
+       "0.9690099346"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,21 +665,24 @@
     "    if getDictOfData.ContainsKey movie then\n",
     "        let movieData = getDictOfData.[movie]\n",
     "        getDictOfData\n",
+    "        |> Seq.take 1000 // Remove this to consider the entire gambit of items\n",
     "        |> Seq.filter( fun x -> not( x.Value = movieData )) // Don't include the current item in question.\n",
     "        |> Seq.map( fun x -> (x.Value.title, computeCosineDistance movie x.Value.title ))\n",
     "        |> Seq.sort\n",
     "        |> Seq.take (recommendationCount)\n",
+    "        |> Seq.toList\n",
     "    else\n",
     "        failwith \"Movie not found!\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "recommendMovies \"Avatar\" 10"
+    "(recommendMovies \"Avatar\" 10)\n",
+    "|> List.iter( fun x -> printfn \"%A\" x)"
    ]
   }
  ],
