--- a/Building a Simple Recommendation System in FSharp.ipynb
+++ b/Building a Simple Recommendation System in FSharp.ipynb
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        "<table><thead><tr><th><i>index</i></th><th>Key</th><th>Value</th></tr></thead><tbody><tr><td>0</td><td>Avatar</td><td>{ FSI_0013+MovieData: title: Avatar, soup: action adventure fantasy sciencefiction 3d alien alienplanet antiwar battle cgi cultureclash future futuristic loveaffair marine mindandsoul powerrelations romance society soldier space spacecolony spacetravel spacewar tribe 22nd alien becomes century civilization dispatched following marine mission moon orders pandora paraplegic protecting torn unique duneentertainment ingeniousfilmpartners lightstormentertainment twentiethcenturyfoxfilmcorporation, soupList: [ action, adventure, fantasy, sciencefiction, 3d, alien, alienplanet, antiwar, battle, cgi ... (35 more) ], popularity: 150.437577 }</td></tr><tr><td>1</td><td>Pirates of the Caribbean: At World&#39;s End</td><td>{ FSI_0013+MovieData: title: Pirates of the Caribbean: At World&#39;s End, soup: action adventure fantasy aftercreditsstinger afterlife alliance calypso drugabuse eastindiatradingcompany exoticisland fighter loveofoneslife ocean pirate ship shipwreck strongwoman swashbuckler traitor back barbossa believed captain come dead earth edge elizabeth headed life long nothing quite seems swann turner jerrybruckheimerfilms secondmateproductions waltdisneypictures, soupList: [ action, adventure, fantasy, aftercreditsstinger, afterlife, alliance, calypso, drugabuse, eastindiatradingcompany, exoticisland ... (29 more) ], popularity: 139.082615 }</td></tr><tr><td>2</td><td>Spectre</td><td>{ FSI_0013+MovieData: title: Spectre, soup: action adventure crime basedonnovel britishsecretservice mi6 secretagent sequel spy unitedkingdom alive back battles behind bond bonds cryptic deceit forces keep layers m message organization past peels political reveal secret sends service sinister spectre terrible trail truth uncover b24 columbiapictures danjaq, soupList: [ action, adventure, crime, basedonnovel, britishsecretservice, mi6, secretagent, sequel, spy, unitedkingdom ... (30 more) ], popularity: 107.376788 }</td></tr><tr><td>3</td><td>The Dark Knight Rises</td><td>{ FSI_0013+MovieData: title: The Dark Knight Rises, soup: action crime drama thriller batman burglar catburglar catwoman coverup crimefighter criminalunderworld dccomics destruction flood gothamcity hostagedrama imax secretidentity superhero terrorism terrorist timebomb tragichero vigilante villainess assumes attorney attorneys bane batman batman branded city city crimes dark death dent dents department district eight encounters enemy finest following gotham gothams harvey hunted knight kyle late later leader mysterious new overwhelms police protect protect reputation responsibility resurfaces selina subsequently terrorist villainous years dcentertainment legendarypictures syncopy warnerbros, soupList: [ action, crime, drama, thriller, batman, burglar, catburglar, catwoman, coverup, crimefighter ... (63 more) ], popularity: 112.31295 }</td></tr><tr><td>4</td><td>John Carter</td><td>{ FSI_0013+MovieData: title: John Carter, soup: action adventure sciencefiction 19thcentury 3d alien alienrace basedonnovel edgarriceburroughs escape mars marscivilization martian medallion princess spacetravel steampunk superhumanstrength swordandplanet (mars) barsoom barsoom becomes brink captain carter carter collapse conflict embroiled epic exotic former hands humanity inexplicably its john military mysterious people planet realizes rediscovers reluctantly rests survival transported warweary whos world waltdisneypictures, soupList: [ action, adventure, sciencefiction, 19thcentury, 3d, alien, alienrace, basedonnovel, edgarriceburroughs, escape ... (42 more) ], popularity: 43.926995 }</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
     "\n",
     "// Function to get feature dictionary\n",
     "let getFeatureDict (movieName : string) = \n",
-    "    if getDictOfData.ContainsKey movieName then getFeatureVectorByMovieData getDictOfData.[movieName]\n",
+    "    if getDictOfData.ContainsKey movieName then getFeatureDictByMovieData getDictOfData.[movieName]\n",
     "    else\n",
     "        failwith \"Movie Not Found!\"\n",
     "        \n",
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
        "<null>"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,23 +671,26 @@
     "\n",
     "![image](./pics/CosineDistance.png)\n",
     "\n",
+    "We need to numerically compute a difference between the feature vectors of two different movies and this is where the distance function comes into place. Specifically, we'll be making use of the Cosine Distance functionality to compute this difference. \n",
+    "\n",
     "Cosine Distance is given by:\n",
     "\n",
     "$ 1 - \\frac{\\arccos(\\text{cosine_similarity(u, v)})}{\\pi} $ <br>\n",
     "\n",
     "where: <br>\n",
-    "$ \\text{cosine_similarity(u, v)}= \\frac{(u . v)}{ (||u|| . ||v||)} $\n",
+    "$ \\text{cosine_similarity(u, v)}= \\frac{(u . v)}{ (||u|| . ||v||)} $ <br>\n",
+    "u and v are both input vectors.\n",
     "\n",
     "We will be using the cosine distance functionality from the ``MathNet.Numerics`` library to compute distances between the feature vectors defined above.\n",
     "\n",
     "#### Why Cosine Distance vs. Cosine Similarity?\n",
     "\n",
-    "According to [this](\"https://arxiv.org/abs/1803.11175\") paper by Google, Cosine distance performs better than raw cosine similarity to compute the difference between two vectors. Thought I'd give it a shot!"
+    "According to [this](\"https://arxiv.org/abs/1803.11175\") paper by Google, Cosine distance performs better than raw cosine similarity to compute the difference between two vectors. Thought I'd give it a shot! Inituitively, the angular distance is better at capturing the difference than simply the distance."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +707,7 @@
        "<null>"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,14 +729,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "let computeCosineDistance (movie1 : string) (movie2 : string) : double  = \n",
     "    // Feature Vector\n",
-    "    let movie1Vector = (getFeatureVector movie1)\n",
-    "    let movie2Vector = (getFeatureVector movie2)\n",
+    "    let movie1Vector = getFeatureVector movie1\n",
+    "    let movie2Vector = getFeatureVector movie2\n",
     "    \n",
     "    // Compute the Cosine distance in the case the movies exist\n",
     "    Distance.Cosine(movie1Vector, movie2Vector)"
@@ -741,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -750,13 +753,20 @@
        "0.004311626155728665"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "computeCosineDistance \"Avatar\" \"The Dark Knight Rises\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see Avatar and The Dark Knight Rises are considered to be somewhat similar based on the word soup and popularity."
    ]
   },
   {
@@ -770,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,6 +805,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try getting recommendations for \"The Dark Knight Rises\""
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -804,6 +821,22 @@
     "    (recommendMovies \"The Dark Knight Rises\" 10)\n",
     "    |> List.iter(fun x -> printfn \"%A %A\" (fst x) (snd x))\n",
     "results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "F# made it incredibly conducive to create a simple recommendation system! It was great fun writing this blogpost and learning about the data science tools available in the ecosystem.\n",
+    "\n",
+    "The next steps of this project could be to create more specialized and advanced recommendation systems and study the behavior of different distance functions."
    ]
   }
  ],
