--- a/Building a Simple Recommendation System in FSharp.ipynb
+++ b/Building a Simple Recommendation System in FSharp.ipynb
@@ -29,9 +29,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Installing package MathNet.Numerics.done!"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Installing package MathNet.Numerics.FSharp.done!"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Installing package FSharp.Data.done!"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=============== S T A R T ==========================================\n",
+      ">>>> /Users/mukundraghavsharma/.nuget/packages/fsharp.data/3.3.2/typeproviders/fsharp41/netstandard2.0/FSharp.Data.DesignTime.dll\n",
+      ">>>> /Users/mukundraghavsharma/.nuget/packages/fsharp.data/3.3.2/lib/netstandard2.0/FSharp.Data.DesignTime.dll\n",
+      "Using: /Users/mukundraghavsharma/.nuget/packages/fsharp.data/3.3.2/typeproviders/fsharp41/netstandard2.0/FSharp.Data.DesignTime.dll\n"
+     ]
+    }
+   ],
    "source": [
     "#r \"nuget:MathNet.Numerics\"\n",
     "#r \"nuget:MathNet.Numerics.FSharp\"\n",
@@ -58,7 +96,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The next step is to conduct a perfunctory data exploration to view the \"shape\" of the columns we decide to make use of. We'll be making use of the Csv Data Provider from ``FSharp.Data``. Alternatively, I could have used [`Deedle`](https://bluemountaincapital.github.io/Deedle/) for this task."
+    "The next step is to conduct a perfunctory data exploration to view the \"shape\" of the columns we decide to make use of. We'll be making use of the Csv Data Provider from ``FSharp.Data``. Alternatively, I could have used [`Deedle`](https://bluemountaincapital.github.io/Deedle/) for this task.\n",
+    "\n",
+    "![image](./pics/FSharpData.png)"
    ]
   },
   {
@@ -462,6 +502,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "// Wrapper function that gets a sequence of all the domain objects.\n",
     "let extractData =\n",
     "    let data = CsvFile.Load(DataPath).Cache()\n",
     "    let mutable output = []\n",
@@ -527,6 +568,7 @@
     }
    ],
    "source": [
+    "// Function that wraps the extractData functionality in a dictionary for ease of use.\n",
     "let getDictOfData = \n",
     "    let out = Dictionary<string, MovieData>()\n",
     "    for w in extractData do\n",
@@ -729,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,7 +850,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's try getting recommendations for \"The Dark Knight Rises\""
+    "Let's try getting recommendations for \"The Dark Knight Rises\"\n",
+    "\n",
+    "![image](./pics/DarkKnightRises.jpg)"
    ]
   },
   {
