Added more detais

--- a/Building a Simple Recommendation System in FSharp.ipynb
+++ b/Building a Simple Recommendation System in FSharp.ipynb
@@ -880,7 +880,7 @@
    "source": [
     "F# made it incredibly conducive to create a simple recommendation system! It was great fun writing this blogpost and learning about the data science tools available in the ecosystem.\n",
     "\n",
-    "The next steps of this project could be to create more specialized and advanced recommendation systems and study the behavior of different distance functions."
+    "The next steps of this project could be to create more specialized and advanced recommendation systems and study the behavior of different distance functions. The current recommendation system is fairly slow; I'll also want to optimize the vector creation process in the next iteration."
    ]
   }
  ],
